--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,15 +13,15 @@ collections:
     label: "Posts" # Used in the UI
     folder: "posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "'{{slug}}'" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Category", name: "category", widget: "select", options: [
-        "TI PARA TODOS", 
-        "APRENDIZADOS",
-        "TECNOLOGIA",
-        "MULHERES TI",
-        "LIVROS"
+        {label: "TI PARA TODOS", value: "ti-para-todos"},
+        {label: "APRENDIZADOS", value: "aprendizados" },
+        {label: "TECNOLOGIA", value: "tecnologia" },
+        {label: ""MULHERES TI"", value: "mulheres-ti" },
+        {label: "LIVROS", value: "livros"}
         ]}
       - { label: "Author", name: "author", widget: "string"}
       - { label: "Description", name: "description", widget: "string" }
