--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,13 +16,34 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Category", name: "category", widget: "select", options: [
-        {label: "TI PARA TODOS", value: "ti-para-todos"},
-        {label: "APRENDIZADOS", value: "aprendizados" },
-        {label: "TECNOLOGIA", value: "tecnologia" },
-        {label: ""MULHERES TI"", value: "mulheres-ti" },
-        {label: "LIVROS", value: "livros"}
-        ]}
+      - { 
+        label: "Category",
+        name: "category", 
+        widget: "select", 
+        options: 
+          [
+            {label: "TI PARA TODOS", value: "ti-para-todos"},
+            {label: "APRENDIZADOS", value: "aprendizados" },
+            {label: "TECNOLOGIA", value: "tecnologia" },
+            {label: ""MULHERES TI"", value: "mulheres-ti" },
+            {label: "LIVROS", value: "livros"}
+          ],
+        },
+         {
+          label: 'Color',
+          name: 'color',
+          widget: 'select',
+          options:
+            [
+              { label: 'Jekyll', value: '#B31917' },
+              { label: 'CSS', value: '#2DA0C3' },
+              { label: 'JS', value: '#D6BA32' },
+              { label: 'HTML', value: '#EB7728' },
+              { label: 'SVG', value: '#7D669E' },
+              { label: 'Dev', value: '#637a91' },
+              { label: 'Misc', value: '#7AAB13' },
+            ],
+        }
       - { label: "Author", name: "author", widget: "string"}
       - { label: "Description", name: "description", widget: "string" }
       - {
