--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,7 +25,7 @@ collections:
             {label: "TI PARA TODOS", value: "ti-para-todos"},
             {label: "APRENDIZADOS", value: "aprendizados" },
             {label: "TECNOLOGIA", value: "tecnologia" },
-            {label: ""MULHERES TI"", value: "mulheres-ti" },
+            {label: "MULHERES TI", value: "mulheres-ti" },
             {label: "LIVROS", value: "livros"}
           ],
         },
