--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "version": "0.1.0",
   "author": "Daniela Duarte",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-netlify-cms": "^4.3.5",
     "gatsby-plugin-offline": "^3.2.7",
